2018-04-18  Ms2ger  <Ms2ger@igalia.com>

        Test gardening.
        https://bugs.webkit.org/show_bug.cgi?id=184726

        Unreviewed test gardening.

        * web-platform-tests/touch-events/historical-expected.txt: update expectation to test change

2018-04-17  Jonathan Bedard  <jbedard@apple.com>

        Unreviewed rollout of r230632. Regression in memory usage.

        That bug tracked in https://bugs.webkit.org/show_bug.cgi?id=184569.

        * web-platform-tests/web-animations/interfaces/Animatable/animate-expected.txt:

2018-04-16  Youenn Fablet  <youenn@apple.com>

        Use NetworkLoadChecker to handle synchronous HTTP loads
        https://bugs.webkit.org/show_bug.cgi?id=184240

        Reviewed by Chris Dumez.

        * web-platform-tests/cors/request-headers-expected.txt:
        * web-platform-tests/XMLHttpRequest/access-control-and-redirects-expected.txt:
        * web-platform-tests/XMLHttpRequest/send-authentication-cors-basic-setrequestheader-expected.txt:
        * web-platform-tests/XMLHttpRequest/send-authentication-cors-setrequestheader-no-cred-expected.txt:

2018-04-16  Antoine Quint  <graouts@apple.com>

        [Web Animations] Ensure we never return -0 through the API
        https://bugs.webkit.org/show_bug.cgi?id=184644

        Reviewed by Dean Jackson.

        Record one progression in the Web Animations WPT tests.

        * web-platform-tests/web-animations/timing-model/animations/updating-the-finished-state-expected.txt:

2018-04-15  Antoine Quint  <graouts@apple.com>

        [Web Animations] Animations do not naturally get a finish event
        https://bugs.webkit.org/show_bug.cgi?id=184639
        <rdar://problem/39397649>

        Reviewed by Jon Lee.

        Record two progressions in the Web Animations WPT tests.

        * web-platform-tests/web-animations/timing-model/animations/updating-the-finished-state-expected.txt:

2018-04-15  Chris Dumez  <cdumez@apple.com>
