@@ -1,3 +1,15 @@
+2018-04-18  Youenn Fablet  <youenn@apple.com>
+
+        MediaResourceLoader should set its fetch destination
+        https://bugs.webkit.org/show_bug.cgi?id=184746
+
+        Reviewed by Eric Carlson.
+
+        * web-platform-tests/service-workers/service-worker/fetch-request-resources.https-expected.txt:
+        * web-platform-tests/service-workers/service-worker/fetch-request-resources.https.html:
+        * web-platform-tests/service-workers/service-worker/resources/fetch-request-resources-iframe.https.html:
+        * web-platform-tests/service-workers/service-worker/resources/fetch-request-resources-worker.js:
+
 2018-04-18  Ms2ger  <Ms2ger@igalia.com>
 
         Test gardening.
